style: Fix backdrop blur on iOS

--- a/src/components/WatchList/AddCryptoModal/AddCryptoModal.module.css
+++ b/src/components/WatchList/AddCryptoModal/AddCryptoModal.module.css
@@ -6,6 +6,7 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   display: flex;
   align-items: center;
   justify-content: center;
